--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -115,7 +115,19 @@ header {
 	background-position: center;
 }
 
-.check{
-  border: red solid 1px;
-}
+.overlay-status{
 
+  height: 100vh;
+  width: 100vw;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 36px;
+  
+}
